--- a/GraphCodeBERT/codesearch/labelling_observation.ipynb
+++ b/GraphCodeBERT/codesearch/labelling_observation.ipynb
@@ -1122,6 +1122,52 @@
     "print(f\"AA MRR max: {max(aa_mrr)} at epoch {aa_mrr.index(max(aa_mrr)) + 1}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read MRR values from train_attention_wo_softmax_retrieval.log\n",
+    "import re\n",
+    "from datetime import datetime\n",
+    "\n",
+    "mrr_values = []\n",
+    "epochs = []\n",
+    "\n",
+    "log_path = \"/inspire/hdd/ws-f4d69b29-e0a5-44e6-bd92-acf4de9990f0/public-project/liuyiming-240108540153/codesearch/train_attention_wo_softmax_retrieval.log\"\n",
+    "\n",
+    "with open(log_path, 'r') as f:\n",
+    "    for line in f:\n",
+    "        if \"eval_mrr =\" in line:\n",
+    "            # Extract MRR value using regex\n",
+    "            mrr_match = re.search(r'eval_mrr = ([\\d.]+)', line)\n",
+    "            if mrr_match:\n",
+    "                mrr_values.append(float(mrr_match.group(1)))\n",
+    "                \n",
+    "                # Extract epoch number from timestamp\n",
+    "                timestamp = re.search(r'(\\d{2}/\\d{2}/\\d{4} \\d{2}:\\d{2}:\\d{2})', line)\n",
+    "                if timestamp:\n",
+    "                    dt = datetime.strptime(timestamp.group(1), '%m/%d/%Y %H:%M:%S')\n",
+    "                    epochs.append(len(epochs) + 1)  # Just use sequential numbering\n",
+    "\n",
+    "# Create plot of MRR values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(epochs, mrr_values, marker='o', label='Attention w/o Softmax MRR')\n",
+    "\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel('MRR Value')\n",
+    "plt.title('MRR Values: Attention without Softmax')\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Print the maximum MRR value\n",
+    "print(\"\\nMaximum MRR value:\")\n",
+    "print(f\"Attention w/o Softmax MRR max: {max(mrr_values)} at epoch {mrr_values.index(max(mrr_values)) + 1}\")\n"
+   ]
   }
  ],
  "metadata": {
