--- a/GraphCodeBERT/codesearch/valid_multi_epoch_analyze_visactor.ipynb
+++ b/GraphCodeBERT/codesearch/valid_multi_epoch_analyze_visactor.ipynb
@@ -2937,6 +2937,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from IPython.display import display, HTML\n",
+    "from collections import deque\n",
+    "\n",
+    "# Process code part\n",
+    "code_snippet = remove_docstrings(train_dataset[convert_idx_code][\"code\"])\n",
+    "token_list2 = code_tokens_data[convert_idx_code][1:]\n",
+    "token_list1 = nl_tokens_data[convert_idx][1:]\n",
+    "\n",
+    "# Get docstring and remove parameter descriptions\n",
+    "doc_snippet = train_dataset[convert_idx][\"docstring\"].split(\"\\n\")[0]\n",
+    "\n",
+    "# Remove any parts of code_snippet that appear in doc_snippet\n",
+    "doc_words = set(doc_snippet.lower().split())\n",
+    "code_lines = code_snippet.split('\\n')\n",
+    "filtered_code_lines = []\n",
+    "\n",
+    "for line in code_lines:\n",
+    "    # Skip line if it contains too many words from docstring\n",
+    "    line_words = set(line.lower().split())\n",
+    "    overlap = len(line_words.intersection(doc_words))\n",
+    "    if overlap < len(line_words) / 2:  # Keep line if less than 50% overlap\n",
+    "        filtered_code_lines.append(line)\n",
+    "\n",
+    "code_snippet = '\\n'.join(filtered_code_lines)\n",
+    "\n",
+    "# Process comment part - using the alignment information\n",
+    "array = nl_attention_features[epoch-1][data_ind]  # Get data for current epoch\n",
+    "array = array[1:]\n",
+    "\n",
+    "normalized_contributions = (array - array.min()) / (array.max() - array.min())\n",
+    "tokens_with_contributions = deque([(token.replace(\"Ġ\", \"\"), contrib) for token, contrib in zip(token_list1, normalized_contributions)])\n",
+    "\n",
+    "code_attention_feature = code_attention_features[epoch-1][data_ind][1:]\n",
+    "code_normalized_contributions = (code_attention_feature - code_attention_feature.min()) / (code_attention_feature.max() - code_attention_feature.min())\n",
+    "code_tokens_with_contributions = deque([(token.replace(\"Ġ\", \"\"), contrib) for token, contrib in zip(token_list2, code_normalized_contributions)])\n",
+    "\n",
+    "# Use the alignment information to assign colors\n",
+    "color_map_comment = {}\n",
+    "color_map_code = {}\n",
+    "\n",
+    "# Create mappings based on alignment groups\n",
+    "comment_indices = [[0], [2, 3], [5, 9, 11]]\n",
+    "code_indices = [[1, 2, 3, 4, 5], [7, 43], [18, 26, 46, 47, 54, 55]]\n",
+    "\n",
+    "for group_idx, (comment_group, code_group) in enumerate(zip(comment_indices, code_indices)):\n",
+    "    color = high_contrast_colors[group_idx % len(high_contrast_colors)]\n",
+    "    # Assign colors to comment indices\n",
+    "    for comment_idx in comment_group:\n",
+    "        color_map_comment[comment_idx] = color\n",
+    "    # Assign colors to code indices  \n",
+    "    for code_idx in code_group:\n",
+    "        color_map_code[code_idx] = color\n",
+    "\n",
+    "# Generate HTML output\n",
+    "html_string = \"<h4 style='margin:0'>Comment:</h4><pre>\"\n",
+    "buffer = \"\"\n",
+    "current_index = 0\n",
+    "for char in doc_snippet:\n",
+    "    if char == \"\\n\":\n",
+    "        html_string += buffer + \"<br>\"\n",
+    "        buffer = \"\"\n",
+    "    elif tokens_with_contributions:\n",
+    "        token, contrib = tokens_with_contributions[0]\n",
+    "        buffer += char\n",
+    "        if buffer == token:\n",
+    "            font_size = 8 + (16 - 8) * contrib\n",
+    "            color = color_map_comment.get(current_index, \"black\")\n",
+    "            html_string += f'<span style=\"font-size: {font_size}px; color: {color};\">{buffer}</span>'\n",
+    "            buffer = \"\"\n",
+    "            tokens_with_contributions.popleft()\n",
+    "            current_index += 1\n",
+    "        elif not token.startswith(buffer):\n",
+    "            color = color_map_comment.get(current_index, \"black\")\n",
+    "            html_string += f'<span style=\"color: {color};\">{buffer[0]}</span>'\n",
+    "            buffer = buffer[1:]\n",
+    "    else:\n",
+    "        color = color_map_comment.get(current_index, \"black\")\n",
+    "        html_string += f'<span style=\"color: {color};\">{char}</span>'\n",
+    "html_string += buffer + \"</pre>\"\n",
+    "\n",
+    "# Code part\n",
+    "html_string += \"<h4 style='margin:0'>Code:</h4><pre>\"\n",
+    "buffer = \"\"\n",
+    "current_index = 0\n",
+    "for char in code_snippet:\n",
+    "    if char == \"\\n\":\n",
+    "        html_string += buffer + \"<br>\"\n",
+    "        buffer = \"\"\n",
+    "    elif code_tokens_with_contributions:\n",
+    "        token, contrib = code_tokens_with_contributions[0]\n",
+    "        buffer += char\n",
+    "        if buffer == token:\n",
+    "            font_size = 8 + (16 - 8) * contrib\n",
+    "            color = color_map_code.get(current_index, \"black\")\n",
+    "            html_string += f'<span style=\"font-size: {font_size}px; color: {color};\">{buffer}</span>'\n",
+    "            buffer = \"\"\n",
+    "            code_tokens_with_contributions.popleft()\n",
+    "            current_index += 1\n",
+    "        elif not token.startswith(buffer):\n",
+    "            color = color_map_code.get(current_index, \"black\")\n",
+    "            html_string += f'<span style=\"color: {color};\">{buffer[0]}</span>'\n",
+    "            buffer = buffer[1:]\n",
+    "    else:\n",
+    "        color = color_map_code.get(current_index, \"black\")\n",
+    "        html_string += f'<span style=\"color: {color};\">{char}</span>'\n",
+    "html_string += buffer + \"</pre>\"\n",
+    "\n",
+    "# Display result\n",
+    "display(HTML(html_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
